# agenttrace

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-agenthub.yml
agenthub_analysis/: __init__.py  cli.py  graph.py  state.py
agenthub_analysis/criteria/: agent_type_keywords.py
agenthub_analysis/nodes/: analyzer.py  collect_snapshot.py  evidence_scout.py  persist_analysis.py  quality_gate.py  risk_and_followup.py
agenthub_analysis/prompts/: classify_relevance.md  evidence_scout.md  extract_claims.md  quality_gate.md
agenthub_analysis/schemas/: claim.py
data/: sample_repo.json  superpowers_repo.json
data/fixtures/: context7_snapshot.json  high_harness_repo.json  low_readme_only_agent_repo.json  medium_skill_or_mcp_repo.json
docs/: agenthub_analysis_workflow.md  algorithm.md  prototype_notes.md  troubleshooting_learnings.md
docs/legacy/: harness_relevance_analysis_design.md
docs/superpowers/plans/: 2026-06-05-agenthub-analysis-prototype.md  2026-06-11-harness-relevance-analysis.md  2026-06-20-agenthub-analysis-v2.md  2026-06-21-separate-analysis-summary-models.md  2026-06-23-finalize-analysis-perf.md  2026-06-23-implement-analysis-feature.md  2026-06-23-pipeline-logging.md  (+1 more)
scripts/: make_snapshot.py  smoke_context7.py
src/agenttrace/: config.py  models.py
tests/: test_analysis_chunking.py  test_analysis_job_store.py  test_analysis_v2_graph.py  test_analysis_v2_nodes.py  test_analysis_v2_schemas.py  test_api_analysis.py  test_area_explorer.py  test_content_index_store.py  test_embeddings.py  test_file_catalog.py  test_harness_analysis.py  test_nodes.py  test_repo_ingest.py  test_state_diet.py  test_summary_api.py  test_summary_service.py  test_trend_reports.py
(+57 files in other folders)
